--- a/StudentSupport/templates/hod/hod_manage_department.html
+++ b/StudentSupport/templates/hod/hod_manage_department.html
@@ -266,13 +266,13 @@
                                                     <div class="col-lg-8">
                                                         <div class="page-header-title">
                                                             <div class="d-inline">
-                                                                <h4>Manage Department</h4>
+                                                                <h3>Manage Department</h3>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-4">
+                                                    <div class="col-sm-4 col-md-4 col-lg-4">
                                                         <span class="f-right">
-                                                            <a href="{% url 'hod_dashboard' %}">
+                                                            <a href="{% url 'hod_dashboard' %}" class="btn" style="font-size: 15px">
                                                                 <i class="feather icon-arrow-left"></i>
                                                                 Back to Dashboard
                                                             </a>
@@ -380,8 +380,9 @@
                                                                     <h5>List of Subjects of Department</h5>
                                                                 </div>
                                                                 <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                                                                    <button type="button" class="btn btn-primary f-right" data-toggle="modal" data-target="#add-subject-modal">
-                                                                        Add Subjects
+                                                                    <button type="button" class="btn btn-outline-primary f-right" data-toggle="modal" data-target="#add-subject-modal">
+                                                                        <i class="feather icon-plus"></i>
+                                                                         Add Subjects
                                                                     </button>
                                                                 </div>
                                                             </div>
