--- a/StudentSupport/templates/students/student_end_sem_feedback.html
+++ b/StudentSupport/templates/students/student_end_sem_feedback.html
@@ -408,6 +408,7 @@
                             for(i=1;i<=parseInt(ans);++i) {
                                 content += '<label class="rating"></label>';
                             }
+                            content += '</div>';
                             $(this).html(content);
                         });
                         modal.modal('show');
